# balsamina

./: CMakeLists.txt  main.c
core/inc/: core.h  linked_list.h
core/src/client/: client.c
core/src/server/: server.c
core/src/utils/: linked_list.c
ui/inc/: esc.h  ui.h
ui/src/: main.c  user_interface.c
